Fixes coin ability alignment

--- a/src/styles/sass/_layout.sass
+++ b/src/styles/sass/_layout.sass
@@ -75,6 +75,9 @@ header, footer
         .card__text-container
             font-size: .7em
 
+        .card__abilities-money span
+            padding: 0
+
         .card__cost
             height: 10px
             width: 10px
